# CrowDB

./: .breakpoints  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  main  main.cpp  rough  rough.cpp
.ccls-cache/@@home@runner@MrDatabase/: @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@__stddef_max_align_t.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdarg.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stddef.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdint.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@backward@binders.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@alloc_traits.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@allocated_ptr.h.blob  (+181 more)
.ccls-cache/@home@runner@MrDatabase/: Api@api.cpp  Api@api.cpp.blob  (+8 more)
Api/: api  api.cpp
Hash_Table/: hashing.cpp  linked-list.cpp  main  main-1.cpp  main.cpp
api-files/: test.cpp
include/: hashing.h  hashing_templatized.h
main-cpp-files/: hashing.cpp  rough.cpp
production-api-files/: production-api-methods.cpp
production-requests/: request-script.sh
production-user-defined-header-files/: hashing-templatized.h  hashing.h
requests/: basic-request.sh
sample-api-files/: sample-api-methods-2.cpp
src/: api  api.cpp
user-defined-header-files/: avl-tree.h  avl_tree.h  hashing.h  linked-list.h
(+6 files in other folders)
